Changes in styles: fix submit positioning, fix texts styling, fix autocomplete

--- a/app/client/less/main.less
+++ b/app/client/less/main.less
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400&subset=latin,latin-ext);
 @import url("./lesshat.less");
 
 body {
@@ -95,7 +96,6 @@ body {
 				opacity: 0;
 				margin: 0;
 				font-size: 0;
-				margin-left: -4px;
 				width: 0;
 				transition: all .3s;
 				// transition-delay: .3s;
