Fix sign in form sizing

--- a/app/client/less/main.less
+++ b/app/client/less/main.less
@@ -67,12 +67,14 @@ body {
 
 			@input-color: grey;
 			input[type=text] {
+				height: calc(57px - 2 * 20px);
 				background: @input-color;
 				border: none;
 				padding: 20px;
 				border-radius: 5px;
 				color: white;
 				opacity: .6;
+				width: 210px;
 				transition: all .3s;
 				// transition-delay: .3s;
 				margin: 0;
@@ -97,6 +99,7 @@ body {
 				margin: 0;
 				font-size: 0;
 				width: 0;
+				height: 0;
 				transition: all .3s;
 				// transition-delay: .3s;
 			}
@@ -105,6 +108,7 @@ body {
 				display: inline-block;
 				opacity: .9;
 				width: 80px;
+				height: 57px;
 				padding: 20px;
 				transition: all .3s;
 				font-size: 13px;
