--- a/app/client/less/main.less
+++ b/app/client/less/main.less
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400&subset=latin,latin-ext);
 @import url("./lesshat.less");
+@import url("./modal.less");
+@import url("./chats.less");
 
 body {
 	padding: 0px;
