--- a/app/client/less/main.less
+++ b/app/client/less/main.less
@@ -67,6 +67,13 @@ body {
 				text-shadow: black 2px 2px 13px;
 			}
 
+			.loading {
+				margin-top: 5px;
+				margin-left: auto;
+				margin-right: auto;
+				width: 64px;
+			}
+
 			@input-color: grey;
 			input[type=text] {
 				height: calc(57px - 2 * 20px);
