--- a/app/client/less/chats.less
+++ b/app/client/less/chats.less
@@ -3,6 +3,7 @@
 @nav-height: 60px;
 
 #chat {
+  color: black;
   .templates {
     display: none !important;
   }
@@ -87,56 +88,64 @@
         padding-bottom: 10px;
       }
 
-      .content {
+      div.other {
+        .display(flex);
         .flex-grow(1);
-        overflow-y: scroll;
+        .flex-shrink(0);
+        .flex-basis(0px);
+        .flex-direction(column);
 
-        .message {
-          padding: 5px;
-          margin: 10px 20px;
-          border: 1px solid grey;
-          border-radius: 20px;
-          float: left;
-          clear: both;
+        .content {
+          .flex-grow(1);
+          overflow-y: scroll;
 
-          &.my {
-            float: right;
+          .message {
+            padding: 5px;
+            margin: 10px 20px;
+            border: 1px solid grey;
+            border-radius: 20px;
+            float: left;
+            clear: both;
+
+            &.my {
+              float: right;
+            }
           }
         }
-      }
 
 
-      .form {
-        box-sizing: content-box;
-        width: 100%;
-        min-height: 100px;
-        .flex-basis(100px);
-        .flex-grow(0);
-        .flex-shrink(0);
-        text-align: center;
-        display: flex;
-        border-top: 1px solid @bg-color;
-
-        textarea {
-          box-sizing: padding-box;
-          max-height: 100%;
-          width: auto;
-          .flex-grow(5);
-          border: none;
-          outline: none;
-          padding: 10px;
-        }
-        input[type=submit] {
+        .form {
           box-sizing: content-box;
-          height: inherit;
-          width: 60px;
-          padding: 0;
-          .flex-grow(1);
-          background: @bg-color;
-          color: white;
-          border: none;
-          outline: none;
+          width: 100%;
+          min-height: 100px;
+          .flex-basis(100px);
+          .flex-grow(0);
+          .flex-shrink(0);
+          text-align: center;
+          display: flex;
+          border-top: 1px solid @bg-color;
 
+          textarea {
+            box-sizing: padding-box;
+            max-height: 100%;
+            width: auto;
+            .flex-grow(5);
+            border: none;
+            outline: none;
+            padding: 10px;
+          }
+          input[type=submit] {
+            box-sizing: content-box;
+            height: inherit;
+            width: 60px;
+            padding: 0;
+            .flex-grow(1);
+            background: @bg-color;
+            color: white;
+            border: none;
+            outline: none;
+
+          }
         }
       }
     }
