--- a/app/client/less/modal.less
+++ b/app/client/less/modal.less
@@ -7,6 +7,7 @@
 
 .modal {
   .content {
+    color: black;
     .animation(modalFlyIn .5s);
     .animation-fill-mode(forwards);
     position: fixed;
