--- a/app/client/less/modal.less
+++ b/app/client/less/modal.less
@@ -42,7 +42,7 @@
     right: 0;
     bottom: 0;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     background-color: rgba(0,0,0,.8);
     z-index: 1000;
   }
