--- a/app/client/less/main.less
+++ b/app/client/less/main.less
@@ -2,6 +2,7 @@
 @import url("./lesshat.less");
 @import url("./modal.less");
 @import url("./chats.less");
+@import url("./notifications.less");
 
 body {
 	padding: 0px;
